src/components/proposal/proposal_box/ProposalBox.module.scss
@use 'styles/theme' as theme;
@use 'styles/spacing' as spacing;
@use 'styles/display' as display;

.proposalBoxContainer {
    display: flex !important;
    flex-direction: column !important;
    justify-content: space-between !important;
    position: relative;
    box-shadow: theme.$box-shadow;
    border: theme.$box-border;
    color: theme.$text-primary;
    border-radius: theme.$box-border-radius;
    background-color: theme.$background-color-primary;
    scroll-margin-top: 150px;
    padding: spacing.$box-spacing;
    gap: spacing.$box-spacing;

    &.flash {
        -webkit-transition: box-shadow 0.8s ease-in-out;
        -moz-transition: box-shadow 0.8s ease-in-out;
        -o-transition: box-shadow 0.8s ease-in-out;
        transition: box-shadow 0.8s ease-in-out;
        box-shadow: 0 0 15px theme.$call-primary;
    }
}

.edited {
    font-size: theme.$font-size-extra-small;
    color: theme.$text-secondary;
    line-height: theme.$line-height-loose;
    @include spacing.mb(1.5, xs);
}

.proposalBoxContent {
    flex: 1;
    min-height: 0;
    overflow: hidden;
    font-size: theme.$font-size-small;
    text-align: left;
    white-space: pre-line;
    line-height: theme.$line-height-loose;
    font-size: theme.$font-size-small;

    &.withMinHeight {
        @include display.media-breakpoint-up(md) {
            min-height: 185px;
        }
    }

    .proposalTitle {
        font-size: theme.$font-size-normal;
        font-weight: theme.$font-weight-bold;
        @include spacing.pb(2, xs);

        &::first-letter {
            text-transform: uppercase;
        }
    }

    .proposalContent {
        & * {
            font-size: theme.$font-size-small;
        }
    }
}

.proposalSourcesList {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
    font-size: theme.$font-size-extra-small;
    font-weight: theme.$font-weight-normal;

    a {
        text-decoration: none;
    }
}

.fixedHeight {
    height: 200px;
    overflow: hidden;
    position: relative;

    &:after {
        content: "";
        position: absolute;
        z-index: 1;
        bottom: 0;
        left: 0;
        right: 0;
        pointer-events: none;
        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 90%);
        width: 100%;
        height: 5em;
    }
}

.proposalContent ol {
	list-style-type: decimal !important;
	@include spacing.ml(2, xs);
	@include spacing.pl(5, xs);
}

.proposalContent ul {
	list-style-type: disc !important;
	@include spacing.ml(2, xs);
	@include spacing.pl(5, xs);
}

.proposalContent ol li::marker,
.proposalContent ul li::marker {
	content: normal !important;
}

